syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

import "prisel/player_info.proto";

// type : BROADCAST,
// packet_type : DEFAULT
message BroadcastPayload {
  PlayerInfo player = 1;
  string message = 2;
}