syntax = "proto3";

package prisel;
option csharp_namespace = "Prisel.Protobuf";

// type : ERROR,
// packet_type : DEFAULT
message ErrorPayload {
  string message = 1;
  optional string detail = 2;
}